--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,14 @@ jobs:
           java-version: '11'
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+        name: Install Flutter manually
+ run: |
+ echo "Installing Flutter 3.13.0..."
+ git clone --depth 1 --branch 3.13.0 https://github.com/flutter/flutter.git $HOME/flutter
+    echo "$HOME/flutter/bin" >> $GITHUB_PATH
+    echo "$HOME/flutter/bin/cache/dart-sdk/bin" >> $GITHUB_PATH
+ flutter --version
+ shell: bash
         with:
           flutter-version: 'latest'
           channel: 'stable'
