--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter: { sdk: flutter }
   flutter_localizations: { sdk: flutter }
-  backendless_sdk: ^8.0.0
+  # هنا التعديل النهائي: استخدم backendless_flutter_sdk
+  backendless_flutter_sdk: ^7.3.0
   flutter_riverpod: ^2.5.1
   flutter_card_swiper: ^7.2.0
   google_mobile_ads: ^7.0.0
